--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 attrs==23.1.0
+certifi==2023.11.17
 Django==4.2.4
+django-debug-toolbar==4.2.0
 django-filter==23.3
 django-rest==0.8.7
 djangorestframework==3.14.0
@@ -20,7 +22,9 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
 rpds-py==0.12.0
+sentry-sdk==1.36.0
 six==1.16.0
 snowballstemmer==2.2.0
 sqlparse==0.4.4
 uritemplate==4.1.1
+urllib3==2.1.0
