--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -10,10 +10,12 @@ docutils==0.20.1
 drf-spectacular==0.26.5
 flake8==6.1.0
 flake8-docstrings==1.7.0
+gunicorn==21.2.0
 inflection==0.5.1
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 mccabe==0.7.0
+packaging==23.2
 Pillow==10.1.0
 pycodestyle==2.11.1
 pydocstyle==6.3.0
