--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-filter = "^23.5"
 django-debug-toolbar = "^4.2.0"
 pillow = "^10.1.0"
 gunicorn = "^21.2.0"
+drf-spectacular = "^0.27.0"
 
 
 [build-system]
